2006-03-15  Thomas Schwinge  <tschwinge@gnu.org>

	* priv.h: Include <argp.h>.

2006-03-05  Roland McGrath  <roland@frob.com>

	* io-seek.c (diskfs_S_io_seek): Return EINVAL if file pointer would
	become negative.

2004-02-10  Roland McGrath  <roland@frob.com>

	* opts-runtime.c (diskfs_runtime_argp): Include <argp.h>.

2003-10-11  Marcus Brinkmann  <marcus@gnu.org>

	* notify-nosenders.c, notify-stubs.c: Delete obsolete files.

2003-06-11  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* dir-renamed.c (diskfs_rename_dir): Check permissions to remove
	FROMNAME before any modification could take place.  Check result
	of removing the from node.

2002-06-26  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (DIST_FILES): Variable removed.
	(MIGSTUBS): Use fs_notifyUser.o, not ourfs_notifyUser.o.
	* ourfs_notify.defs: File removed.
	* diskfs.h (struct node): New members DIRMOD_TICK and
	FILEMOD_TICK.
	* node-make.c (diskfs_make_node): Initialize DIRMOD_TICK and
	FILEMOD_TICK.
	* dir-chg.c: Include "fs_notify_U.h" instead "ourfs_notify_U.h".
	(diskfs_S_dir_notice_changes): Use new dir_changed invocation
	instead nowait_dir_changed.
	(diskfs_notice_dirchange): Likewise.  Increase tick number.
	Ignore send timeout error.
	* file-chg.c: Include "fs_notify_U.h" instead "ourfs_notify_U.h".
	(diskfs_S_file_notice_changes): Use new file_changed invocation
	instead nowait_file_changed.
	(diskfs_notice_filechange): Likewise.  Increase tick number.
	Ignore send timeout error.

2002-06-13  Roland McGrath  <roland@frob.com>

	* dir-readdir.c (diskfs_S_dir_readdir): Revert last change.

2002-06-08  Roland McGrath  <roland@frob.com>

	* io-identity.c (diskfs_S_io_identity): Use ino_t for FILENO.

	* dir-readdir.c (diskfs_S_dir_readdir): Use vm_size_t for AMT.

	* diskfs.h (struct node): Use io_statbuf_t instead of struct stat.
	(struct node): Use ino64_t for cache_id.
	(struct node): Use loff_t instead of off_t.
	(diskfs_grow, diskfs_truncate, diskfs_node_rdwr): Likewise.