@@ -1,3 +1,7 @@
+2006-06-28  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* Makefile (HURDLIBS): Add `pager'.
+
 2006-03-15  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* priv.h: Include <argp.h>.
